# mvarch

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: codeql.yml  pythonapp.yml
scripts/: train_example.sh
src/mvarch/: __init__.py  article_example.py  constants.py  data_sources.py  distributions.py  example.py  matrix_ops.py  mean_models.py  model_factory.py  multivariate_models.py  optimize.py  parameters.py  simulate.py  stock_data.py  train.py  train_mvarch.py  univariate_models.py  util.py
tests/: test_combinations.py  test_combinations.sh  test_distributions.py  test_factory.py  test_matrix_ops.py  test_mean_models.py  test_multivariate.py  test_optimize.py  test_parameters.py  test_stock_data.py  test_univariate_models.py  test_util.py  utils.py
tex_images/: article_equations.tex
