[tool.poetry]
name = "mvarch"
version = "0.0.1"
description = "Multivariate Volatility Models (ARCH) for stock prices and other time series"
authors = ["Mark A Wicks <mawicks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
pandas = "^1.2.3"
torch = "^1.12.0"
yfinance = "^0.1.59"
click = "^8.1.3"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0a6", "setuptools>=46.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# mypy_path = "./src"
mypy_path = "./src"
