[tool.poetry]
name = "mvarch"
version = "0.0.1"
description = "Multivariate Volatility Models (ARCH) for stock prices and other time series"
authors = ["Mark A Wicks <mawicks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <4"
pandas = ">=1"
torch = ">=1"
yfinance = ">=0.1"
click = ">=8"
pytz = "^2022.1"
numpy = ">=1.22"
urllib3 = ">=1.25"
coverage = "^6.4.4"

[tool.poetry.dev-dependencies]
black = ">=22"
mypy = ">=0"
pytest = ">=5"

[build-system]
requires = ["poetry-core>=1.0.0a6", "setuptools>=46.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# mypy_path = "./src"
mypy_path = "./src"
