[metadata]
name = mvarch-mawicks
version = 0.0.1
author = Mark A Wicks
author_email = Mark A Wicks <mawicks@gmail.com>
description = Multivariate Volatility (ARCH) Models for Time Series
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mawicks/mvarch
project_urls =
    Bug Tracker = https://github.com/mawicks/mvarch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
